work continues - im pretty sure that i've got the camera controls all correct now